package com.github.studeasy.dao.notificationDAO;

/**
 * The notification DAO using a MySQL database
 * Contains all the methods accessing user related data
 */
public class MySQLNotificationDAO extends NotificationDAO{
}
