package com.github.studeasy.dao.notificationDAO;

/**
 * Interface for the Notification DAO
 * Contains the methods needed by the Notification DAO
 */
public abstract class NotificationDAO {
}
