package com.github.studeasy.gui.routers;

/**
 * Router for the notification's routes
 */
public class NotificationRouter extends AbstractRouter{
}
