package com.github.studeasy.logic.facades;

/**
 * The Facade Notification for the NotificationDAO
 * It contains methods that allow to add,display,update notifications
 */
public class FacadeNotification {
}
