@startuml
skinparam classAttributeIconSize 0

package GUI{
    abstract class AbstractRouter{
        + {static} load(String pathFXML) : Parent
        + changeView(String pathFXML, ActionEvent event)
        + adminRestricted(String pathFXML, ActionEvent event)
        + studentRestricted(String pathFXML, ActionEvent event)
        + partnerRestricted(String pathFXML, ActionEvent event)
    }

    class NotificationRouter{
         + {static} MANAGE_NOTIFICATION_FXML_PATH : String = "views/notification/manage_notification.fxml"
         + {static} SEE_NOTIFICATION_FXML_PATH : String = "views/notification/see_notification.fxml"
         + {static} getInstance() : NotificationRouter
    }
    class HomeAdminController{
            + manageNotification(ActionEvent event)
    }

     class HomeStudentController{
            + manageNotification(ActionEvent event)
     }

     class HomePartnerController{
            + manageNotification(ActionEvent event)
     }

    class NotificationManagementController{
            + deleteNotification(ActionEvent event)
            + seeAllNotification(ActionEvent event)
            + seeNotification(ActionEvent event)
            + createNotification(ActionEvent event)
            + MarkAsReadNotification(ActionEvent event)
            + back(ActionEvent event)
            + initialize(URL location, RessourceBundle resources)

    }

     class seeNotificationController{
            - notification: notification[]
            - titleNotification : String
            - description : String
            + cancel(ActionEvent event)
            + delete(ActionEvent event)
            + setNotificationSeen(ActionEvent event)
            + initialize(URL location, RessourceBundle resources)
        }


    AbstractRouter <|-right- NotificationRouter
    AbstractRouter <-- HomeAdminController
    AbstractRouter <-- HomePartnerController
    AbstractRouter <-- HomeStudentController
    AbstractRouter <-- NotificationManagementController
    AbstractRouter <-- seeNotificationController

    NotificationManagementController <.. AbstractRouter : creates
    seeNotificationController <.. AbstractRouter : creates
    HomePartnerController <.. AbstractRouter : creates
    HomeStudentController <.. AbstractRouter : creates
    HomeAdminController <.. AbstractRouter : creates



}
package BusinessLogic{
    class FacadeNotification{
        + deleteNotification(Notification notif)
        + seeAllNotification()
        + markAsReadNotification(Notification notif)
        + {static} getInstance() : FacadeCategory
    }

    abstract class Factory{
        + {static} getInstance() : Factory
        + CreateNotificationDAO() : NotificationDAO
    }
    class MySQLFactory{
        - db : Connection
        + CreateNotificationDAO() : CategoryDAO
        - openConnection()
        - closeConnection()
    }

    Factory <|-left- MySQLFactory

    FacadeNotification <-- NotificationManagementController
    FacadeNotification <-- seeNotificationController

}

package DAO{

    abstract class NotificationDAO{
        + {static} getInstance() : NotificationDAO
        + deleteNotification(Notification notif)
        + seeAllNotification() : Notification[]
        + createNotification(User user)
        + MarkAsReadNotification(Notification notif)
    }

    class MySQLNotificationDAO{
        - DB : Connection
        + deleteNotification(Notification notif)
        + seeAllNotification() : Notification[]
        + createNotification(User user)
        + MarkAsReadNotification(Notification notif)
    }

    MySQLNotificationDAO --|> NotificationDAO
    MySQLNotificationDAO <.right. MySQLFactory : creates

    Factory <.. NotificationDAO : creates
    NotificationDAO <-right- FacadeNotification
}



@enduml